--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-google-maps/api": "^2.17.1",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
